# ai-recruitment-platform

backend/: README.md  pyproject.toml
backend/app/: main.py  pyproject.toml
backend/app/application/use_cases/: create_application.py  create_job_offer.py  list_applications_by_job_offer.py  list_job_offers.py  upload_application_cv.py
backend/app/domain/entities/: application.py  job_offer.py
backend/app/domain/ports/: application_repository.py  file_storage.py  job_offer_repository.py
backend/app/infrastructure/http/routers/: application_router.py  job_offer_router.py
backend/app/infrastructure/http/schemas/: application_schema.py  job_offer_schema.py
backend/app/infrastructure/persistence/in_memory/: in_memory_application_repository.py  in_memory_job_offer_repository.py
backend/app/infrastructure/storage/: local_file_storage.py
backend/app/shared/: dependencies.py
