[project]
name = "ai-recruitment-platform"
version = "0.1.0"
description = "AI-powered recruitment platform backend for CV filtering and candidate selection"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0"
]

[tool.uv]
# uv genera automáticamente el lockfile